Sudoku update 0.1.4